--- a/1. 14July2022/index.html
+++ b/1. 14July2022/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <video width="300" height="200" controls autoplay>
-        <source src="https://www.youtube.com/watch?v=1uOGtz2JUoA" type="video">
-        your browser does not support the video
+    <video width="500px" height="300px" controls="controls" />
+    <source src="D:\2010990867 - DailyPractice\1. 14July2022\videoplayback.mp4" type="video/mp4">
+    your browser does not support the video
     </video>
     <figure>
         <img src=" https://wallpaper-house.com/data/out/8/wallpaper2you_228517.jpg" alt="image not found"
